--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@syncfusion/ej2": "^21.2.4",
+    "@syncfusion/ej2-react-calendars": "^21.2.4",
+    "@syncfusion/ej2-react-charts": "^21.2.4",
+    "@syncfusion/ej2-react-dropdowns": "^21.2.4",
+    "@syncfusion/ej2-react-grids": "^21.2.4",
+    "@syncfusion/ej2-react-inputs": "^21.2.4",
+    "@syncfusion/ej2-react-kanban": "^21.2.3",
+    "@syncfusion/ej2-react-popups": "^21.2.4",
+    "@syncfusion/ej2-react-richtexteditor": "^21.2.4",
+    "@syncfusion/ej2-react-schedule": "^21.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +23,9 @@
     "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23"
   }
 }
